# OrbitHub

./: .gitignore  README.md  netlify.toml
.github/workflows/: rust.yml
server/: .env.example  Cargo.toml  README.md
server/migrations/: 20240101000000_initial.sql  20240101000001_circles.sql  20240101000002_stories.sql  20240101000003_notifications.sql  20240101000004_link_in_bio.sql  20240101000005_chat.sql
server/src/: config.rs  error.rs  main.rs
server/src/auth/: handler.rs  middleware.rs  mod.rs  models.rs  service.rs
server/src/chat/: handler.rs  mod.rs  models.rs  service.rs  ws.rs
server/src/circles/: handler.rs  mod.rs  models.rs  service.rs
server/src/db/: db.rs
server/src/notifications/: handler.rs  mod.rs  models.rs  service.rs  ws.rs
server/src/stories/: handler.rs  mod.rs  models.rs  service.rs
server/src/user/: handler.rs  mod.rs  models.rs  service.rs
web/: .env.example  index.html  package-lock.json  package.json  seed.sh  tailwind.config.js  tsconfig.tsbuildinfo
web/src/: App.tsx  index.css
web/src/api/: auth.ts  chat.ts  circles.ts  client.ts  highlights.ts  notifications.ts  stories.ts  users.ts
web/src/components/: CircleCard.tsx  CirclePicker.tsx  CommentList.tsx  CreateHighlightModal.tsx  CreateStoryModal.tsx  HighlightCard.tsx  Layout.tsx  LikeButton.tsx  NotificationBell.tsx  ProtectedRoute.tsx  StoryCard.tsx  UserListSheet.tsx  UserSearchCard.tsx
web/src/context/: AuthContext.tsx  ChatContext.tsx  NotificationContext.tsx
web/src/hooks/: useChatWebSocket.ts  useNotifications.ts  useWebSocket.ts
(+16 files in other folders)
